--- a/public/views/productModal.html
+++ b/public/views/productModal.html
@@ -23,6 +23,6 @@
     </div>
     <br />
     <div class="text-center">
-        <button class="btn btn-primary btn-lg" ng-click="ok()">Comprar</button>
+        <button class="btn btn-primary btn-lg" ng-click="ok()">Comprar123</button>
     </div>
 </div>
