--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -163,6 +163,7 @@ padding: 16px 15px 16px 14px;
     position: absolute;
     top: 100px;
     left: 45%;
+    white-space: nowrap;
 }
 .product .panel {
     background-color: #f4f4f4;
@@ -282,5 +283,15 @@ width: 400px;
 }
 
 
+
+/*#endregion */
+
+/*#region MediaQuery */
+
+@media (max-width: 1200px) {
+  .navbar-default .navbar-nav>li>a {
+    padding-left: 5px;
+  }
+}
 
 /*#endregion */
