--- a/public/views/Instrucciones.html
+++ b/public/views/Instrucciones.html
@@ -6,7 +6,7 @@
 <div class="MsoListParagraph" style="color: #444444; font-family: &quot;Helvetica Neue&quot;,Arial,Helvetica,sans-serif;">
 &nbsp;&nbsp;&nbsp; En&nbsp; <b style="mso-bidi-font-weight: normal;">Puesto en casa</b> puedes realizar tu compra sin moverte de tu domicilio.</div>
 <div class="MsoNormal" style="color: #444444; font-family: &quot;Helvetica Neue&quot;,Arial,Helvetica,sans-serif;">
-Solo debes seguir las instrucciones y rápidamente concretarás la compra.</div>
+Solo debes seguir las instrucciones y r&aacutepidamente concretarás la compra.</div>
 <div class="MsoNormal">
 <div style="color: #444444; font-family: &quot;Helvetica Neue&quot;,Arial,Helvetica,sans-serif;">
 Antes que nada debes saber, que<b> el pago se realiza &nbsp;en tu domicilio</b> en el momento que recibas tu pedido. Siempre podrás ver tu compra antes de pagar.<br />
