--- a/public/views/Instrucciones.html
+++ b/public/views/Instrucciones.html
@@ -12,7 +12,7 @@ Solo debes seguir las instrucciones y r&aacutepidamente concretar&aacutes la com
 Antes que nada debes saber, que<b> el pago se realiza &nbsp;en tu domicilio</b> en el momento que recibas tu pedido. Siempre podr&aacutes ver tu compra antes de pagar.<br />
 <br />
 &nbsp;&nbsp;&nbsp; Para realizar cualquier compra, deber&aacutes reg&iacutestrate <b>por &uacutenica vez.</b> <br />
-Si no est&aacutes registrado hazlo en el men&uacute o haz <a href="http://gphplantas.blogspot.com/p/srchttpsdocs.html">CLICK AQUÏ.</a></div>
+Si no est&aacutes registrado hazlo en el men&uacute o haz <a href="http://gphplantas.blogspot.com/p/srchttpsdocs.html">CLICK AQU&Iacute.</a></div>
 </div>
 <div class="separator" style="clear: both; text-align: center;">
 <img border="0" src="http://4.bp.blogspot.com/-mOenhc6IERQ/VAIm9bh6pnI/AAAAAAAAA08/Lh0gwUa7LZw/s1600/Instrucciones2.png" /></div>
@@ -28,7 +28,7 @@ Si no est&aacutes registrado hazlo en el men&uacute o haz <a href="http://gphpla
 <br />
 <a href="http://4.bp.blogspot.com/-_mzfBs1wnUo/VITQzcvtUgI/AAAAAAAABH0/M81k1ZBcUF0/s1600/Instrucciones3.png" imageanchor="1" style="clear: left; float: left; margin-bottom: 1em; margin-right: 1em;"><img border="0" src="http://4.bp.blogspot.com/-_mzfBs1wnUo/VITQzcvtUgI/AAAAAAAABH0/M81k1ZBcUF0/s1600/Instrucciones3.png" height="173" width="200" /></a><span style="font-family: Symbol;"><span style="font: 7pt &quot;Times New Roman&quot;;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;</span></span><br />
 <br />
-<span style="font-family: Symbol;"><span style="font: 7pt &quot;Times New Roman&quot;;">&nbsp;</span></span><span style="color: #444444; font-family: &quot;Helvetica Neue&quot;,Arial,Helvetica,sans-serif;">&nbsp;&nbsp; <span style="font-family: Symbol;"></span>Ahora recorre la página buscando el producto que te interesa . All&iacute podr&aacutes&nbsp; ver el precio por kilo o unidad. </span><span style="color: #444444;"><span style="font-family: &quot;Helvetica Neue&quot;,Arial,Helvetica,sans-serif;">Haciendo click sobre la imagen del producto se despliega una imagen aumentada donde seleccionas la cantidad y anotas cualquier comentario que creas necesario.</span></span><br />
+<span style="font-family: Symbol;"><span style="font: 7pt &quot;Times New Roman&quot;;">&nbsp;</span></span><span style="color: #444444; font-family: &quot;Helvetica Neue&quot;,Arial,Helvetica,sans-serif;">&nbsp;&nbsp; <span style="font-family: Symbol;"></span>Ahora recorre la p&aacutegina buscando el producto que te interesa . All&iacute podr&aacutes&nbsp; ver el precio por kilo o unidad. </span><span style="color: #444444;"><span style="font-family: &quot;Helvetica Neue&quot;,Arial,Helvetica,sans-serif;">Haciendo click sobre la imagen del producto se despliega una imagen aumentada donde seleccionas la cantidad y anotas cualquier comentario que creas necesario.</span></span><br />
 <span style="color: #444444;"><span style="font-family: &quot;Helvetica Neue&quot;,Arial,Helvetica,sans-serif;">Por &uacuteltimo dale a Comprar </span></span><br />
 <a href="http://3.bp.blogspot.com/-1Yck7eOH9HE/VITRMMK8tmI/AAAAAAAABH8/6lg9AYlE-o4/s1600/instrucciones3-1.png" imageanchor="1" style="clear: right; float: right; margin-bottom: 1em; margin-left: 1em;"><img border="0" src="http://3.bp.blogspot.com/-1Yck7eOH9HE/VITRMMK8tmI/AAAAAAAABH8/6lg9AYlE-o4/s1600/instrucciones3-1.png" height="200" width="195" /></a><b style="color: #444444; font-family: &quot;Helvetica Neue&quot;,Arial,Helvetica,sans-serif;">&nbsp; &nbsp; </b><br />
 <div class="separator" style="clear: both; text-align: center;">
@@ -37,13 +37,13 @@ Si no est&aacutes registrado hazlo en el men&uacute o haz <a href="http://gphpla
 &nbsp; &nbsp; <br />
 <a href="http://2.bp.blogspot.com/-7Otiaa0AzA0/VITRqjhObJI/AAAAAAAABIE/6ClGNYEQP68/s1600/Instrucciones6.png" imageanchor="1" style="clear: right; float: right; margin-bottom: 1em; margin-left: 1em;"><img border="0" src="http://2.bp.blogspot.com/-7Otiaa0AzA0/VITRqjhObJI/AAAAAAAABIE/6ClGNYEQP68/s1600/Instrucciones6.png" height="97" width="200" /></a><br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Pulsando en el bot&oacuten M&iacute Carrito (bot&oacuten amarillo<br />
-&nbsp;&nbsp;&nbsp;&nbsp; sobre la derecha de la barra de Menú) <br />
+&nbsp;&nbsp;&nbsp;&nbsp; sobre la derecha de la barra de Men&uacute) <br />
 &nbsp;&nbsp;&nbsp;&nbsp; se despliega tu lista de compras.<br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; <br />
 <br />
 <br />
-<a href="http://3.bp.blogspot.com/-WBrjfOzODEw/VITSGZxPLKI/AAAAAAAABIM/EOo-5m5noYs/s1600/Instrucciones7.png" imageanchor="1" style="clear: right; float: right; margin-bottom: 1em; margin-left: 1em;"><img border="0" src="http://3.bp.blogspot.com/-WBrjfOzODEw/VITSGZxPLKI/AAAAAAAABIM/EOo-5m5noYs/s1600/Instrucciones7.png" height="185" width="320" /></a> &nbsp;&nbsp; Allí podr&aacutes ver los art&iacuteculos de tu pedido<br />
+<a href="http://3.bp.blogspot.com/-WBrjfOzODEw/VITSGZxPLKI/AAAAAAAABIM/EOo-5m5noYs/s1600/Instrucciones7.png" imageanchor="1" style="clear: right; float: right; margin-bottom: 1em; margin-left: 1em;"><img border="0" src="http://3.bp.blogspot.com/-WBrjfOzODEw/VITSGZxPLKI/AAAAAAAABIM/EOo-5m5noYs/s1600/Instrucciones7.png" height="185" width="320" /></a> &nbsp;&nbsp; All&iacute podr&aacutes ver los art&iacuteculos de tu pedido<br />
 modificar las cantidades o eliminar el producto. Tambi&eacuten ver&aacutes un valor aproximado<br />
 de tu compra.<br />
 &nbsp;&nbsp; Cuando hallas terminado tu pedido debes<br />
@@ -54,7 +54,7 @@ hacer click sobre el bot&oacuten<br />
 <br />
 <br />
 <br />
-&nbsp;&nbsp;&nbsp; Se te pedir&aacute Email y contraseña, o que te registres en caso de ser nuevo cliente<br />
+&nbsp;&nbsp;&nbsp; Se te pedir&aacute Email y contrase&Ntildea, o que te registres en caso de ser nuevo cliente<br />
 <div class="separator" style="clear: both; text-align: center;">
 <a href="http://4.bp.blogspot.com/-4466_3712ME/VITVL9hGbGI/AAAAAAAABIY/LGPfQQQ0gXA/s1600/Instrucciones8.png" imageanchor="1" style="margin-left: 1em; margin-right: 1em;"><img border="0" src="http://4.bp.blogspot.com/-4466_3712ME/VITVL9hGbGI/AAAAAAAABIY/LGPfQQQ0gXA/s1600/Instrucciones8.png" height="213" width="320" /></a></div>
 &nbsp;&nbsp;&nbsp;&nbsp; Podr&aacutes ver la lista completa de tu compra con tus datos personales.</div>
