--- a/public/views/Instrucciones.html
+++ b/public/views/Instrucciones.html
@@ -89,7 +89,7 @@
 		</TD>
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
 			<P STYLE="margin-top: 0.02in"><FONT COLOR="#0000ff">       
-			<IMG SRC="public/images/Instrucciones/Instrucciones2.png" NAME="Picture 8" ALIGN=BOTTOM WIDTH=203 HEIGHT=178 BORDER=0></FONT></P>
+			<IMG SRC=".public/images/Instrucciones/Instrucciones2.png" NAME="Picture 8" ALIGN=BOTTOM WIDTH=203 HEIGHT=178 BORDER=0></FONT></P>
 		</TD>
 	</TR>
 	<TR VALIGN=TOP>
