nuevo cambio direccion

--- a/public/views/Instrucciones.html
+++ b/public/views/Instrucciones.html
@@ -89,7 +89,7 @@
 		</TD>
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
 			<P STYLE="margin-top: 0.02in"><FONT COLOR="#0000ff">       
-			<IMG SRC="http://3.bp.blogspot.com/-r_yZEZjj_gM/VITQSQU49cI/AAAAAAAABHs/k2K_YVpPWkI/s1600/Instrucciones4.png"  ALIGN=BOTTOM WIDTH=203 HEIGHT=178 BORDER=0></FONT></P>
+			<img border="0" src="http://4.bp.blogspot.com/-mOenhc6IERQ/VAIm9bh6pnI/AAAAAAAAA08/Lh0gwUa7LZw/s1600/Instrucciones2.png" /></P>
 		</TD>
 	</TR>
 	<TR VALIGN=TOP>
