--- a/public/views/Instrucciones.html
+++ b/public/views/Instrucciones.html
@@ -98,7 +98,7 @@
 			</P>
 			<P STYLE="margin-top: 0.02in"><FONT COLOR="#0000ff">              
 			  
-			<IMG SRC="i_fba79224d0e2ff79_html_71ef99f4.png" NAME="Picture 7" ALIGN=BOTTOM WIDTH=200 HEIGHT=173 BORDER=0></FONT>
+			<IMG SRC="http://4.bp.blogspot.com/-_mzfBs1wnUo/VITQzcvtUgI/AAAAAAAABH0/M81k1ZBcUF0/s1600/Instrucciones3.png" NAME="Picture 7" ALIGN=BOTTOM WIDTH=200 HEIGHT=173 BORDER=0></FONT>
 						</P>
 		</TD>
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
