--- a/public/views/Instrucciones.html
+++ b/public/views/Instrucciones.html
@@ -131,7 +131,7 @@
 		</TD>
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
 			<P><FONT COLOR="#0000ff">       
-			<IMG SRC="i_fba79224d0e2ff79_html_m685e43a0.jpg" NAME="Picture 6" ALIGN=BOTTOM WIDTH=215 HEIGHT=220 BORDER=0></FONT>
+			<IMG SRC="http://3.bp.blogspot.com/-1Yck7eOH9HE/VITRMMK8tmI/AAAAAAAABH8/6lg9AYlE-o4/s1600/instrucciones3-1.png" ALIGN=BOTTOM WIDTH=215 HEIGHT=220 BORDER=0></FONT>
 			 
 			</P>
 		</TD>
