--- a/public/views/Instrucciones.html
+++ b/public/views/Instrucciones.html
@@ -146,7 +146,7 @@
 		</TD>
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
 			<P><FONT COLOR="#0000ff">         
-			<IMG SRC="i_fba79224d0e2ff79_html_m6d781314.png" NAME="Picture 5" ALIGN=BOTTOM WIDTH=200 HEIGHT=97 BORDER=0></FONT></P>
+			<IMG SRC="http://2.bp.blogspot.com/-7Otiaa0AzA0/VITRqjhObJI/AAAAAAAABIE/6ClGNYEQP68/s1600/Instrucciones6.png" ALIGN=BOTTOM WIDTH=200 HEIGHT=97 BORDER=0></FONT></P>
 		</TD>
 	</TR>
 	<TR VALIGN=TOP>
