--- a/public/views/Instrucciones.html
+++ b/public/views/Instrucciones.html
@@ -165,7 +165,7 @@
 			<P STYLE="margin-bottom: 0in"><BR>
 			</P>
 			<P><FONT COLOR="#0000ff">       
-			<IMG SRC="i_fba79224d0e2ff79_html_75295ef2.png" NAME="Picture 3" ALIGN=BOTTOM WIDTH=200 HEIGHT=56 BORDER=0>
+			<IMG SRC="http://3.bp.blogspot.com/-WBrjfOzODEw/VITSGZxPLKI/AAAAAAAABIM/EOo-5m5noYs/s1600/Instrucciones7.png" NAME="Picture 3" ALIGN=BOTTOM WIDTH=200 HEIGHT=56 BORDER=0>
 			                                        </FONT>
 			</P>
 		</TD>
@@ -183,7 +183,7 @@
 			</P>
 		</TD>
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
-			<P><IMG SRC="i_fba79224d0e2ff79_html_2ea5f94f.png" NAME="Picture 11" ALIGN=BOTTOM WIDTH=277 HEIGHT=184 BORDER=0></P>
+			<P><IMG SRC="http://4.bp.blogspot.com/-ESJm_s8J_-I/VITYexvw8YI/AAAAAAAABIs/4Hp1gv0qXjw/s1600/Instrucciones10.png" ALIGN=BOTTOM WIDTH=277 HEIGHT=184 BORDER=0></P>
 		</TD>
 	</TR>
 	<TR VALIGN=TOP>
