--- a/public/views/Instrucciones.html
+++ b/public/views/Instrucciones.html
@@ -151,7 +151,7 @@
 	</TR>
 	<TR VALIGN=TOP>
 		<TD WIDTH=315 STYLE="border: none; padding: 0in">
-			<P><IMG SRC="i_fba79224d0e2ff79_html_m7aca9577.png" NAME="Picture 4" ALIGN=BOTTOM WIDTH=320 HEIGHT=185 BORDER=0></P>
+			<P><IMG SRC="http://3.bp.blogspot.com/-WBrjfOzODEw/VITSGZxPLKI/AAAAAAAABIM/EOo-5m5noYs/s1600/Instrucciones7.png" ALIGN=BOTTOM WIDTH=320 HEIGHT=185 BORDER=0></P>
 		</TD>
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
 			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">  </FONT>
@@ -165,7 +165,7 @@
 			<P STYLE="margin-bottom: 0in"><BR>
 			</P>
 			<P><FONT COLOR="#0000ff">       
-			<IMG SRC="http://3.bp.blogspot.com/-WBrjfOzODEw/VITSGZxPLKI/AAAAAAAABIM/EOo-5m5noYs/s1600/Instrucciones7.png" NAME="Picture 3" ALIGN=BOTTOM WIDTH=200 HEIGHT=56 BORDER=0>
+			<IMG SRC="http://4.bp.blogspot.com/-ESJm_s8J_-I/VITYexvw8YI/AAAAAAAABIs/4Hp1gv0qXjw/s1600/Instrucciones10.png" ALIGN=BOTTOM WIDTH=200 HEIGHT=56 BORDER=0>
 			                                        </FONT>
 			</P>
 		</TD>
@@ -183,13 +183,13 @@
 			</P>
 		</TD>
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
-			<P><IMG SRC="http://4.bp.blogspot.com/-ESJm_s8J_-I/VITYexvw8YI/AAAAAAAABIs/4Hp1gv0qXjw/s1600/Instrucciones10.png" ALIGN=BOTTOM WIDTH=277 HEIGHT=184 BORDER=0></P>
+			<P><IMG SRC="http://4.bp.blogspot.com/-4466_3712ME/VITVL9hGbGI/AAAAAAAABIY/LGPfQQQ0gXA/s1600/Instrucciones8.png" ALIGN=BOTTOM WIDTH=277 HEIGHT=184 BORDER=0></P>
 		</TD>
 	</TR>
 	<TR VALIGN=TOP>
 		<TD WIDTH=315 STYLE="border: none; padding: 0in">
 			<P><FONT COLOR="#0000ff">      
-			<IMG SRC="i_fba79224d0e2ff79_html_3898586e.png" NAME="Picture 1" ALIGN=BOTTOM WIDTH=256 HEIGHT=102 BORDER=0></FONT></P>
+			<IMG SRC="http://4.bp.blogspot.com/-wBbwj-gdFjM/VITWIndm6GI/AAAAAAAABIg/9sGMHED_gNo/s1600/instrucciones9.png" ALIGN=BOTTOM WIDTH=256 HEIGHT=102 BORDER=0></FONT></P>
 		</TD>
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
 			<P STYLE="margin-bottom: 0in"><BR>
