Cambio tamaño de letras segundo párraFO

--- a/public/views/Instrucciones.html
+++ b/public/views/Instrucciones.html
@@ -60,9 +60,9 @@
 		<TD WIDTH=315 STYLE="border: none; padding: 0in">
 			<P STYLE="margin-bottom: 0in"><BR>
 			</P>
-			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444"><FONT FACE="Arial, serif">Para
-			realizar cualquier compra, deberás regístrate </FONT></FONT><FONT COLOR="#444444"><FONT FACE="Arial, serif"><B>por
-			única vez.</B></FONT></FONT><FONT COLOR="#444444"><FONT FACE="Arial, serif">
+			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Para
+			realizar cualquier compra, deberás regístrate </FONT></FONT><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt"><B>por
+			única vez.</B></FONT></FONT><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">
 			 Si no estás registrado hazlo en   Registrarse </FONT></FONT>
 			</P>
 			<P><BR>
@@ -105,7 +105,7 @@
 			<P STYLE="margin-bottom: 0in"><BR>
 			</P>
 			<P STYLE="margin-bottom: 0in"><FONT COLOR="#0000ff"> </FONT><FONT COLOR="#444444">
-			</FONT><FONT FACE="Times New Roman, serif"><FONT SIZE=3><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Ahora
+			</FONT><FONT FACE="Times New Roman, serif"><FONT SIZE=3><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">  Ahora
 			recorre la página buscando el producto que te interesa. Allí
 			podrás ver el precio por kilo o unidad.</FONT></FONT></FONT></FONT></FONT></P>
 			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">  <FONT FACE="Times New Roman, serif"><FONT SIZE=3><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Haciendo
