Ajuste tipo de letra a Arial,Serif y todas el mismo tamaño

--- a/public/views/Instrucciones.html
+++ b/public/views/Instrucciones.html
@@ -108,7 +108,7 @@
 			</FONT><FONT FACE="Times New Roman, serif"><FONT SIZE=3><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">  Ahora
 			recorre la página buscando el producto que te interesa. Allí
 			podrás ver el precio por kilo o unidad.</FONT></FONT></FONT></FONT></FONT></P>
-			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">  <FONT FACE="Times New Roman, serif"><FONT SIZE=3><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Haciendo
+			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">  <FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Haciendo
 			clic sobre la imagen del producto, se despliega una imagen
 			aumentada del producto seleccionado.</FONT></FONT></FONT></FONT></FONT></P>
 			<P>  
@@ -121,7 +121,7 @@
 			</P>
 			<P STYLE="margin-bottom: 0in"><BR>
 			</P>
-			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">  <FONT FACE="Times New Roman, serif"><FONT SIZE=3><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Aquí
+			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">  <FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Aquí
 			seleccionas la cantidad y anotas cualquier comentario que creas
 			necesario.</FONT></FONT></FONT><FONT COLOR="#0000ff"><FONT SIZE=2 STYLE="font-size: 11pt">
 			</FONT></FONT><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Por
@@ -140,7 +140,7 @@
 		<TD WIDTH=315 STYLE="border: none; padding: 0in">
 			<P STYLE="margin-bottom: 0in"><BR>
 			</P>
-			<P><FONT COLOR="#444444">  <FONT FACE="Arial, serif">Pulsando en
+			<P><FONT COLOR="#444444">  <FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Pulsando en
 			el botón Mí Carrito (botón amarillo  sobre la derecha de la
 			barra de Menú) se despliega tu lista de compras.</FONT></FONT></P>
 		</TD>
@@ -156,7 +156,7 @@
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
 			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">  </FONT>
 			</P>
-			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">  <FONT FACE="Arial, serif">Allí
+			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">  <FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Allí
 			podrás ver los artículos de tu pedido modificar las cantidades o
 			eliminar el producto. También verás un valor aproximado de tu
 			compra. Cuando hayas terminado tu pedido debes hacer clic sobre el
@@ -176,7 +176,7 @@
 			</P>
 			<P STYLE="margin-bottom: 0in"><BR>
 			</P>
-			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">  <FONT FACE="Times New Roman, serif"><FONT SIZE=3><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Se
+			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Se
 			te pedirá Email y contraseña, o que te registres en caso de ser
 			nuevo cliente.</FONT></FONT></FONT></FONT></FONT></P>
 			<P><BR>
@@ -194,7 +194,7 @@
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
 			<P STYLE="margin-bottom: 0in"><BR>
 			</P>
-			<P><FONT COLOR="#444444">  <FONT FACE="Arial, serif">Podrás ver
+			<P><FONT COLOR="#444444">  <FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Podrás ver
 			la lista completa de tu compra con tus datos personales. Das clic
 			en Confirmar pedido.</FONT></FONT></P>
 		</TD>
