sangrias &nbsp;&nbsp;

--- a/public/views/Instrucciones.html
+++ b/public/views/Instrucciones.html
@@ -78,7 +78,7 @@
 			<P STYLE="margin-bottom: 0in"><BR>
 			</P>
 			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">&nbsp;&nbsp;
-			<FONT FACE="Times New Roman, serif"><FONT SIZE=3><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">En
+			<FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">En
 			primer lugar, en el menú, pasa el mouse sobre </FONT></FONT></FONT><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt"><I><B>Productos</B></I></FONT></FONT></FONT><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">.
 			El menú se despliega (Verduras Frutas Flores) y haces clic sobre
 			lo que deseas ver.</FONT></FONT></FONT><FONT COLOR="#0000ff"><FONT SIZE=2 STYLE="font-size: 11pt">
@@ -105,7 +105,7 @@
 			<P STYLE="margin-bottom: 0in"><BR>
 			</P>
 			<P STYLE="margin-bottom: 0in"><FONT COLOR="#0000ff"> </FONT><FONT COLOR="#444444">
-			</FONT><FONT FACE="Times New Roman, serif"><FONT SIZE=3><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">  Ahora
+			</FONT><FONT COLOR="#444444">&nbsp;&nbsp;<FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">  Ahora
 			recorre la página buscando el producto que te interesa. Allí
 			podrás ver el precio por kilo o unidad.</FONT></FONT></FONT></FONT></FONT></P>
 			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">  <FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Haciendo
@@ -121,7 +121,7 @@
 			</P>
 			<P STYLE="margin-bottom: 0in"><BR>
 			</P>
-			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">  <FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Aquí
+			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">&nbsp;&nbsp;<FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Aquí
 			seleccionas la cantidad y anotas cualquier comentario que creas
 			necesario.</FONT></FONT></FONT><FONT COLOR="#0000ff"><FONT SIZE=2 STYLE="font-size: 11pt">
 			</FONT></FONT><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Por
@@ -140,7 +140,7 @@
 		<TD WIDTH=315 STYLE="border: none; padding: 0in">
 			<P STYLE="margin-bottom: 0in"><BR>
 			</P>
-			<P><FONT COLOR="#444444">  <FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Pulsando en
+			<P><FONT COLOR="#444444">&nbsp;&nbsp;<FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Pulsando en
 			el botón Mí Carrito (botón amarillo  sobre la derecha de la
 			barra de Menú) se despliega tu lista de compras.</FONT></FONT></P>
 		</TD>
@@ -156,7 +156,7 @@
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
 			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">  </FONT>
 			</P>
-			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">  <FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Allí
+			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">&nbsp;&nbsp;<FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Allí
 			podrás ver los artículos de tu pedido modificar las cantidades o
 			eliminar el producto. También verás un valor aproximado de tu
 			compra. Cuando hayas terminado tu pedido debes hacer clic sobre el
