Sangrias a toda la página

--- a/public/views/Instrucciones.html
+++ b/public/views/Instrucciones.html
@@ -33,7 +33,7 @@
 	<COL WIDTH=532>
 	<TR>
 		<TD WIDTH=532 VALIGN=TOP STYLE="border: none; padding: 0in">
-			<P STYLE="margin-top: 0.02in"><FONT COLOR="#444444">  <FONT FACE="Times New Roman, serif"><FONT SIZE=3><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">En&nbsp;
+			<P STYLE="margin-top: 0.02in"><FONT COLOR="#444444">&nbsp;&nbsp;<FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">En&nbsp;
 			</FONT></FONT></FONT><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt"><B>Puesto
 			en casa</B></FONT></FONT></FONT><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">
 			puedes realizar tu compra sin moverte de tu domicilio. Solo debes
@@ -42,7 +42,7 @@
 	</TR>
 	<TR>
 		<TD WIDTH=532 VALIGN=TOP STYLE="border: none; padding: 0in">
-			<P STYLE="margin-top: 0.02in"><FONT COLOR="#444444">  <FONT FACE="Times New Roman, serif"><FONT SIZE=3><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Antes
+			<P STYLE="margin-top: 0.02in"><FONT COLOR="#444444">&nbsp;&nbsp;<FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Antes
 			que nada debes saber, que</FONT></FONT></FONT><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt"><B>
 			el pago se realiza &nbsp;en tu domicilio</B></FONT></FONT></FONT><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">
 			en el momento que recibas tu pedido. Siempre podrás ver tu compra
@@ -60,7 +60,7 @@
 		<TD WIDTH=315 STYLE="border: none; padding: 0in">
 			<P STYLE="margin-bottom: 0in"><BR>
 			</P>
-			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Para
+			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">&nbsp;&nbsp;<FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Para
 			realizar cualquier compra, deberás regístrate </FONT></FONT><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt"><B>por
 			única vez.</B></FONT></FONT><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">
 			 Si no estás registrado hazlo en   Registrarse </FONT></FONT>
@@ -176,7 +176,7 @@
 			</P>
 			<P STYLE="margin-bottom: 0in"><BR>
 			</P>
-			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Se
+			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">&nbsp;&nbsp;<FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Se
 			te pedirá Email y contraseña, o que te registres en caso de ser
 			nuevo cliente.</FONT></FONT></FONT></FONT></FONT></P>
 			<P><BR>
@@ -194,7 +194,7 @@
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
 			<P STYLE="margin-bottom: 0in"><BR>
 			</P>
-			<P><FONT COLOR="#444444">  <FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Podrás ver
+			<P><FONT COLOR="#444444">&nbsp;&nbsp;<FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Podrás ver
 			la lista completa de tu compra con tus datos personales. Das clic
 			en Confirmar pedido.</FONT></FONT></P>
 		</TD>
@@ -207,16 +207,15 @@
 	<COL WIDTH=570>
 	<TR>
 		<TD WIDTH=570 VALIGN=TOP STYLE="border: none; padding: 0in">
-			<P STYLE="margin-bottom: 0in"><A NAME="_GoBack"></A><FONT COLOR="#444444">
-			  <FONT FACE="Times New Roman, serif"><FONT SIZE=3><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Recibirás
+			<P STYLE="margin-bottom: 0in"><A NAME="_GoBack"></A><FONT COLOR="#444444">&nbsp;&nbsp;<FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Recibirás
 			un e-mail de confirmación y a la brevedad te llamaremos a tu
 			teléfono para coordinar la entrega.</FONT></FONT></FONT></FONT></FONT></P>
-			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">  <FONT FACE="Times New Roman, serif"><FONT SIZE=3><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Y
+			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">&nbsp;&nbsp;<FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Y
 			recuerda, solo debes pagar después que hayas visto la mercadería.
 			Cualquier consulta puedes realizarla al </FONT></FONT></FONT><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt"><B>09998989</B></FONT></FONT></FONT></FONT></FONT></P>
-			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">   <FONT FACE="Times New Roman, serif"><FONT SIZE=3><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Esperamos
+			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">&nbsp;&nbsp;<FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Esperamos
 			verte pronto.</FONT></FONT></FONT></FONT></FONT></P>
-			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">  <FONT FACE="Times New Roman, serif"><FONT SIZE=3><FONT FACE="Arial, serif">Gracias.</FONT></FONT></FONT></FONT></P>
+			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">&nbsp;&nbsp;<FONT FACE="Arial, serif">Gracias.</FONT></FONT></FONT></FONT></P>
 			<P STYLE="margin-bottom: 0in"><BR>
 			</P>
 			<P><BR>
