cambio tamaño letra última palabra

--- a/public/views/Instrucciones.html
+++ b/public/views/Instrucciones.html
@@ -215,7 +215,7 @@
 			Cualquier consulta puedes realizarla al </FONT></FONT></FONT><FONT COLOR="#444444"><FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt"><B>09998989</B></FONT></FONT></FONT></FONT></FONT></P>
 			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">&nbsp;&nbsp;<FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Esperamos
 			verte pronto.</FONT></FONT></FONT></FONT></FONT></P>
-			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">&nbsp;&nbsp;<FONT FACE="Arial, serif">Gracias.</FONT></FONT></FONT></FONT></P>
+			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">&nbsp;&nbsp;<FONT FACE="Arial, serif"><FONT SIZE=2 STYLE="font-size: 11pt">Gracias.</FONT></FONT></FONT></FONT></P>
 			<P STYLE="margin-bottom: 0in"><BR>
 			</P>
 			<P><BR>
