--- a/public/views/Instrucciones.html
+++ b/public/views/Instrucciones.html
@@ -70,7 +70,7 @@
 		</TD>
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
 			<P STYLE="margin-top: 0.02in">       
-			<img border="0" src="http://4.bp.blogspot.com/-mOenhc6IERQ/VAIm9bh6pnI/AAAAAAAAA08/Lh0gwUa7LZw/s1600/Instrucciones2.png" /></P>
+			<img border="0" src="http://www.puestoencasa.com.uy/images/Instrucciones/Instrucciones2.png" /></P>
 		</TD>
 	</TR>
 	<TR VALIGN=TOP>
