todas direcciones internas

--- a/public/views/Instrucciones.html
+++ b/public/views/Instrucciones.html
@@ -89,7 +89,7 @@
 		</TD>
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
 			<P STYLE="margin-top: 0.02in"><FONT COLOR="#0000ff">       
-			<img border="0" src="http://3.bp.blogspot.com/-r_yZEZjj_gM/VITQSQU49cI/AAAAAAAABHs/k2K_YVpPWkI/s1600/Instrucciones4.png" /></P>
+			<img border="0" src="http://www.puestoencasa.com.uy/images/Instrucciones/Instrucciones4.png" /></P>
 		</TD>
 	</TR>
 	<TR VALIGN=TOP>
@@ -98,7 +98,7 @@
 			</P>
 			<P STYLE="margin-top: 0.02in"><FONT COLOR="#0000ff">              
 			  
-			<img border="0" src="http://4.bp.blogspot.com/-_mzfBs1wnUo/VITQzcvtUgI/AAAAAAAABH0/M81k1ZBcUF0/s1600/Instrucciones3.png" ALIGN=BOTTOM WIDTH=320 HEIGHT=200 BORDER=0></FONT>
+			<img border="0" src="http://www.puestoencasa.com.uy/images/Instrucciones/Instrucciones3.png" ALIGN=BOTTOM WIDTH=320 HEIGHT=200 BORDER=0></FONT>
 						</P>
 		</TD>
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
@@ -131,7 +131,7 @@
 		</TD>
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
 			<P><FONT COLOR="#0000ff">       
-			<IMG SRC="http://3.bp.blogspot.com/-1Yck7eOH9HE/VITRMMK8tmI/AAAAAAAABH8/6lg9AYlE-o4/s1600/instrucciones3-1.png" ALIGN=BOTTOM WIDTH=215 HEIGHT=220 BORDER=0></FONT>
+			<IMG SRC="http://www.puestoencasa.com.uy/images/Instrucciones/Instrucciones3-3.png" ALIGN=BOTTOM WIDTH=215 HEIGHT=220 BORDER=0></FONT>
 			 
 			</P>
 		</TD>
@@ -146,12 +146,12 @@
 		</TD>
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
 			<P><FONT COLOR="#0000ff">         
-			<IMG SRC="http://2.bp.blogspot.com/-7Otiaa0AzA0/VITRqjhObJI/AAAAAAAABIE/6ClGNYEQP68/s1600/Instrucciones6.png" ALIGN=BOTTOM WIDTH=200 HEIGHT=97 BORDER=0></FONT></P>
+			<IMG SRC="http://www.puestoencasa.com.uy/images/Instrucciones/Instrucciones6.png" ALIGN=BOTTOM WIDTH=200 HEIGHT=97 BORDER=0></FONT></P>
 		</TD>
 	</TR>
 	<TR VALIGN=TOP>
 		<TD WIDTH=315 STYLE="border: none; padding: 0in">
-			<P><IMG SRC="http://3.bp.blogspot.com/-WBrjfOzODEw/VITSGZxPLKI/AAAAAAAABIM/EOo-5m5noYs/s1600/Instrucciones7.png" ALIGN=BOTTOM WIDTH=320 HEIGHT=185 BORDER=0></P>
+			<P><IMG SRC="http://www.puestoencasa.com.uy/images/Instrucciones/Instrucciones7.png" ALIGN=BOTTOM WIDTH=320 HEIGHT=185 BORDER=0></P>
 		</TD>
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
 			<P STYLE="margin-bottom: 0in"><FONT COLOR="#444444">  </FONT>
@@ -165,7 +165,7 @@
 			<P STYLE="margin-bottom: 0in"><BR>
 			</P>
 			<P><FONT COLOR="#0000ff">       
-			<IMG SRC="http://4.bp.blogspot.com/-ESJm_s8J_-I/VITYexvw8YI/AAAAAAAABIs/4Hp1gv0qXjw/s1600/Instrucciones10.png" ALIGN=BOTTOM WIDTH=200 HEIGHT=56 BORDER=0>
+			<IMG SRC="http://www.puestoencasa.com.uy/images/Instrucciones/Instrucciones10.png" ALIGN=BOTTOM WIDTH=200 HEIGHT=56 BORDER=0>
 			                                        </FONT>
 			</P>
 		</TD>
@@ -183,13 +183,13 @@
 			</P>
 		</TD>
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
-			<P><IMG SRC="http://4.bp.blogspot.com/-4466_3712ME/VITVL9hGbGI/AAAAAAAABIY/LGPfQQQ0gXA/s1600/Instrucciones8.png" ALIGN=BOTTOM WIDTH=277 HEIGHT=184 BORDER=0></P>
+			<P><IMG SRC="http://www.puestoencasa.com.uy/images/Instrucciones/Instrucciones8.png" ALIGN=BOTTOM WIDTH=277 HEIGHT=184 BORDER=0></P>
 		</TD>
 	</TR>
 	<TR VALIGN=TOP>
 		<TD WIDTH=315 STYLE="border: none; padding: 0in">
 			<P><FONT COLOR="#0000ff">      
-			<IMG SRC="http://4.bp.blogspot.com/-wBbwj-gdFjM/VITWIndm6GI/AAAAAAAABIg/9sGMHED_gNo/s1600/instrucciones9.png" ALIGN=BOTTOM WIDTH=256 HEIGHT=102 BORDER=0></FONT></P>
+			<IMG SRC="http://www.puestoencasa.com.uy/images/Instrucciones/instrucciones9.png" ALIGN=BOTTOM WIDTH=256 HEIGHT=102 BORDER=0></FONT></P>
 		</TD>
 		<TD WIDTH=273 STYLE="border: none; padding: 0in">
 			<P STYLE="margin-bottom: 0in"><BR>
