corrijo direccion de archivo

--- a/public/views/paracookies-crear.html
+++ b/public/views/paracookies-crear.html
@@ -4,7 +4,7 @@ setcookie("micookie","pan,2,leche,4");
 <br>
 <br>
 <br>
-<a href ="paracookies_leer.html">Ver la cookie creada</a>
+<a href ="http://www.puestoencasa.com.uy/views/paracookies_leer.html">Ver la cookie creada</a>
 ?>
 <HTML>
 <HEAD>
