subi el archivo a dropbox asi que cambie la direcciomn

--- a/public/views/paracookies-crear.html
+++ b/public/views/paracookies-crear.html
@@ -4,7 +4,7 @@ setcookie("micookie","pan,2,leche,4");
 <br>
 <br>
 <br>
-<a href ="http://www.puestoencasa.com.uy/public/views/paracookies_leer.html">Ver la cookie creada</a>
+<a href ="https://www.dropbox.com/s/hpgm23t0936zz7a/paracookies%20_leer.html?dl=0">Ver la cookie creada</a>
 ?>
 <HTML>
 <HEAD>
