--- a/public/backend/views/products.html
+++ b/public/backend/views/products.html
@@ -49,7 +49,7 @@
             </td>
             <td>
                 <span class="glyphicon glyphicon-floppy-disk" ng-click="save(product)"></span>
-                <span class="glyphicon glyphicon-remove" ng-click="remove($index)"></span>
+                <span class="glyphicon glyphicon-remove hidden" ng-click="remove($index)"></span>
             </td>
         </tr>
     </tbody>
