cambio texto advertencia

--- a/public/views/cart.html
+++ b/public/views/cart.html
@@ -26,7 +26,7 @@
     <tfoot>
         <tr>
             <td colspan="4">
-                <span class="text-danger">* precio aproximado. Puede variar dependiendo de la unidad.</span>
+                <span class="text-danger">* Precio aproximado. Puede variar dependiendo del peso de la unidad o peso total.</span>
             </td>
             <th>Total:</th>
             <th>{{cart.getTotalPrice() | currency}}</th>
