--- a/public/backend/views/orders.html
+++ b/public/backend/views/orders.html
@@ -42,7 +42,7 @@
                             <td>{{line.quantity}}</td>
                             <td>{{line.unit}}</td>
                             <td>{{line.price | currency}}</td>
-                            <td>{{item.comment}} </td>
+                            <td>{{item.comments}} </td>
                             <td>{{line.price * line.quantity | currency}}</td>
                         </tr>
                         <tr>
