--- a/public/views/productModal.html
+++ b/public/views/productModal.html
@@ -1,4 +1,4 @@
-﻿<div class="product-modal">
+﻿<form name="productForm" class="product-modal" ng-submit="submit(productForm)" novalidate="">
     <h2>{{product.name}}</h2>
     <p>{{product.description}}</p>
     <div class="row">
@@ -13,7 +13,7 @@
             </div>
             <div class="form-group">
                 <label>Cantidad</label>
-                <input type="number" class="form-control" ng-model="quantity" />
+                <input type="number" class="form-control" ng-model="quantity" min="0.0" name="quantity" />
             </div>
         </div>
     </div>
@@ -23,6 +23,6 @@
     </div>
     <br />
     <div class="text-center">
-        <button class="btn btn-primary btn-lg" ng-click="ok()">Comprar</button>
+        <button class="btn btn-primary btn-lg" type="submit">Comprar</button>
     </div>
-</div>
+</form>
